# project-rustycards

./: README.md
client/: Cargo.toml
client/src/: action.rs  card.rs  main.rs  p2p_client.rs
rusty_cards/: Cargo.toml
rusty_cards/client/: Cargo.toml
rusty_cards/client/src/: action.rs  main.rs  p2p_client.rs  tutorial.rs  utils.rs
rusty_cards/game/: Cargo.toml
rusty_cards/game/src/: board.rs  card.rs  deck.rs  display.rs  hand.rs  lib.rs  player.rs
rusty_cards/server/: Cargo.toml
rusty_cards/server/src/: main.rs  server.rs
rusty_cards/src/: lib.rs
