[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_cards = { path = "../" }
game = { path = "../game" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
nom = "7.1.3"
log = "0.4.17"
colored = "2.0.0"
