[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
log = "0.4.17"
rusty_cards = { path = "../" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
